--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ grid-column-gap: 0px;
 grid-row-gap: 0px;
 }
 
-.div1 { grid-area: 1 / 1 / 2 / 6; }
-.div2 { grid-area: 5 / 1 / 6 / 6; }
-.div3 { grid-area: 2 / 1 / 5 / 2; }
-.div4 { grid-area: 2 / 2 / 4 / 5; }
-.div5 { grid-area: 4 / 2 / 5 / 5; }
-.div6 { grid-area: 2 / 5 / 5 / 6; }
+.div1 { grid-area: 1 / 1 / 2 / 6; border:solid 2px black;}
+.div2 { grid-area: 5 / 1 / 6 / 6; border:solid 2px black;}
+.div3 { grid-area: 2 / 1 / 5 / 2; border:solid 2px black;}
+.div4 { grid-area: 2 / 2 / 4 / 5; border:solid 2px black;}
+.div5 { grid-area: 4 / 2 / 5 / 5; border:solid 2px black;}
+.div6 { grid-area: 2 / 5 / 5 / 6; border:solid 2px black;}
