--- a/style.css
+++ b/style.css
@@ -1,14 +1,65 @@
+
+@import url('https://fonts.cdnfonts.com/css/samsung-sans-4');
+body{
+    font-family: 'Samsung Sans', sans-serif;
+    color:white;    
+    background: linear-gradient(90deg, rgb(14, 14, 14) 0%, rgb(61, 65, 65) 75%, rgb(234, 18, 3) 100%); 
+                                           
+}
+.div7 {
+   
+    position: relative;
+    animation: MyDiv;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-direction: normal;
+  }
+  @keyframes MyDiv {
+    0%    {right: -40px; top: 0px;}
+    50%   {right: 10px;top:0px;}
+    75%  {right: -30px; top: 0px;}
+    100%   {right:  0px;top:0px;}
+  }
+.league-pic{
+    width:70px;
+    height:70px;
+}
+nav{
+    text-align: left;
+    margin-left: -20px;
+}
+li{
+    list-style: none;
+    margin-bottom: 20px;
+
+}
+li:hover{
+    color:rgb(255, 68, 0);
+    text-shadow: 1px 0px rgb(255, 174, 0);
+    transform: scale(1.1);
+}
 .parent {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: 0.35fr repeat(4, 1fr);
+    grid-auto-rows: /*0.5fr repeat(2, 1.5fr);*/ minmax(75px,auto);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    }
     
-    .div1 { grid-area: 1 / 1 / 2 / 6; border:solid 2px black;}
+    text-align: left;
+    }
+    .div7{
+        grid-column: 2/4;
+        grid-row: 2;
+    }
+    .div1 { 
+        grid-area: 1 / 1 / 1 / 6; 
+        border:solid 2px black;
+        background-color: rgba(0, 0, 0, 0.322);
+        
+    }
     .div2 { grid-area: 5 / 1 / 6 / 6; border:solid 2px black;}
     .div3 { grid-area: 2 / 1 / 5 / 2; border:solid 2px black;}
-    .div4 { grid-area: 2 / 2 / 4 / 5; border:solid 2px black;}
+    .div4 { grid-area: 3 / 2 / 4 / 5; border:solid 2px black;}
     .div5 { grid-area: 4 / 2 / 5 / 5; border:solid 2px black;}
-    .div6 { grid-area: 2 / 5 / 5 / 6; border:solid 2px black;}
+    .div6 { grid-area: 3 / 5 / 5 / 6; border:solid 2px black;}
