--- a/style.css
+++ b/style.css
@@ -1,86 +1,82 @@
-
-@import url('https://fonts.cdnfonts.com/css/samsung-sans-4');
+*{
+ padding:0;
+ margin: 0;
+}
+.banner{
+    width: 111%;
+}
 body{
-    font-family: 'Samsung Sans', sans-serif;
-    color:white;    
-    background: linear-gradient(90deg, rgb(14, 14, 14) 0%, rgb(222, 45, 5) 75%, rgb(234, 18, 3) 100%); 
-                                           
+    background-color: rgb(5, 97, 118);
+    color:white;
+    width: 90%;
+    font-family: 'Poppins', sans-serif;
 }
-.div7 {
-   
-    position: relative;
-    animation: MyDiv;
-    animation-duration: 1s;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-in;
-    animation-direction: normal;
-  }
-  @keyframes MyDiv {
-    0%    {right: -40px; top: 0px;}
-    50%   {right: 10px;top:0px;}
-    75%  {right: -30px; top: 0px;}
-    100%   {right:  0px;top:0px;}
-  }
-.league-pic{
-    width:70px;
-    height:70px;
-}
-nav{
-    text-align: left;
-    margin-left: -20px;
-}
-li{
-    list-style: none;
-    margin-bottom: 20px;
+.container {
+    display: grid; 
+    grid-template-columns: 0.5fr 0.5fr 1fr; 
+    grid-template-rows: 0.5fr 2fr 0.5fr;         
+    gap: 10px 10px; 
+    padding: 20px;       
+    width: 100%;
+    margin: 0 auto;
+      }  
 
-}
-li:hover{
-    color:rgb(255, 68, 0);
-    text-shadow: 1px 0px rgb(255, 174, 0);
-    transform: scale(1.1);
-}
-.parent {
-    display: grid;
-    grid-template-columns: 0.35fr repeat(4, 1fr);
-    grid-auto-rows: /*0.5fr repeat(2, 1.5fr);*/ minmax(75px,auto);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    
-    text-align: left;
-    }
-    .div7{
-        grid-column: 2/4;
-        grid-row: 2;
-    }
-    .div1 { 
-        grid-area: 1 / 1 / 1 / 6; 
-        border:solid 2px black;
-        background-color: rgba(0, 0, 0, 0.322);
-        
-    }
-    .div2 { grid-area: 5 / 1 / 6 / 6; border:solid 2px black;}
-    .div3 { grid-area: 2 / 1 / 5 / 2; border:solid 2px black;}
-    .div4 { grid-area: 3 / 2 / 4 / 5; border:solid 2px black;}
-    .div5 { grid-area: 4 / 2 / 5 / 5; border:solid 2px black;}
-    .div6 { grid-area: 3 / 5 / 5 / 6; border:solid 2px black; }
-
-    @media only screen and (max-width: 300px) {
-        body {
-            background: linear-gradient(90deg, rgb(14, 14, 14) 0%, rgb(32, 154, 19) 75%, rgb(15, 234, 3) 100%); 
-        }
-        .div6{
-            display:none;
-        }
-        .div3{
-            display: none;
-        }
-        .div4{
-            grid-area: 3/1/6/6;
-        }
-        .div5{
-            display:none;
-        }
-        .div2{
-            grid-area:6/1/6/6;
-        }
+      img.uclpic{
+        width: 100px;
       }
+      img.uconlpic{
+        width: 65px;
+      }
+      img.ueuclpic{
+        width: 100px;
+      }
+      img.premier-league{
+        width: 70px;
+      }
+      img.serie-A{
+        width: 95px;
+      }
+      img.laliga{
+        width: 70px;
+        margin-left: 12px;
+      }
+      img.bundes{
+        width: 70px;
+        margin-left: 20px;
+      }
+      img.ligue1{
+        width: 60px;
+        margin-left: 15px;
+      }
+      
+      .league-pic{
+        grid-column: 1/4;
+        grid-row: 1/3;
+    }    
+ 
+    .navigation{
+        grid-column: 1/4;
+        grid-row: 3;
+    }
+    .main-body{
+        grid-row: 4;
+        grid-column: 1/4;
+    }
+    ul{
+        display: inline-flex;
+    }
+    li{
+        list-style: none;
+        margin: 20px;
+    }
+    .treble{
+        width: 100%;
+    }
+    
+
+
+
+
+
+
+
