--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@ body{
 }
 .container {
     display: grid; 
-    grid-template-columns: 0.5fr 0.5fr 1fr; 
+    grid-template-columns: 0.5fr 2fr; 
     grid-template-rows: 0.5fr 2fr 0.5fr;         
     gap: 10px 10px; 
-    padding: 20px;       
+    padding: 10px;       
     width: 100%;
     margin: 0 auto;
       }  
@@ -38,7 +38,7 @@ body{
       }
       img.laliga{
         width: 70px;
-        margin-left: 12px;
+        margin-left: 25px;
       }
       img.bundes{
         width: 70px;
@@ -73,7 +73,6 @@ body{
         width: 100%;
     }
     .league-pic {
-   
         position: relative;
         animation: MyDiv;
         animation-duration: 1.5s;
@@ -87,11 +86,11 @@ body{
         75%  {right: -50px; top: 0px;}
         100%   {right:  0px;top:0px;}
       }
-
+    
 @media only screen and (min-width:768px){
     body{
         background: linear-gradient(360deg, rgb(0, 0, 0) 10%, rgb(2, 118, 138) 91%);
-        width: 90%;
+        width: 100%;
     }
     ul{
         display:block;
@@ -102,7 +101,11 @@ body{
         grid-column: 1/2;
     }
     .league-pic{
-        grid-column: 1/4;
+        grid-column: 1/3;
+        margin-left: -10px;
+    }
+    img.laliga{
+        margin-left: 20px;
     }
     nav{
         float:left;
@@ -112,10 +115,34 @@ body{
         grid-row: 2;
     }
     .container{
-        grid-template-columns: 0.2fr 1fr;
+        grid-template-columns: 0.2fr 2fr;
+        width: 95%;
+    }
+    .side-advt{
+        display: none;
+    }
+    .foot{
+        display:none;
+    }
+    .banner{
+        width: 100%;
+    }
+    img.ligue1{
+        width: 90px;
     }
 }
     
+@media only screen and (min-width:1000px){
+.league-pic{
+    margin-right: 50px;
+}
+.banner{
+    width: 100%;
+}
+body{
+    width: 100%;
+}
+}
 
 
 
