--- a/style.css
+++ b/style.css
@@ -2,6 +2,71 @@
  padding:0;
  margin: 0;
 }
+
+/* transfer*/
+table{  
+    
+    text-align: center;
+    background-color: rgba(248, 5, 252, 0.388);
+    box-shadow: 0PX 10PX 10PX 5PX rgb(255, 2, 234);
+    border-radius: 20PX;
+    border: 2px solid rgb(255, 2, 234);
+  }
+  thead{
+    background-color: rgba(221, 0, 255, 0.32);
+    color: rgb(2, 255, 255);
+    border-radius: 10px;
+  }
+  td{
+    
+    border-color: rgb(255, 3, 221);
+     
+  }    
+  .arrow {
+    position: absolute;
+    margin-left: -10px;
+    margin-top: -20px;
+    transform: translate(-50%, -50%);
+    transform: rotate(270deg);
+    cursor: pointer;
+ }
+
+.arrow span {
+    
+    display: block;
+    width: 1.0vw;
+    height: 1.0vw;
+    border-bottom: 5px solid rgb(0, 255, 38);
+    border-right: 5px solid rgb(0, 255, 64);
+    transform: rotate(270deg);
+    margin: 0px;
+    animation: animate 1.5s infinite;
+}
+
+.arrow span:nth-child(2) {
+    animation-delay: -0.2s;
+}
+
+.arrow span:nth-child(3) {
+    animation-delay: -0.4s;
+}
+.foot{
+  text-align: center;
+  grid-column: 1/4;
+}
+@keyframes animate {
+    0% {
+        opacity: 0;
+        transform: rotate(45deg) translate(-20px, -20px);
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: rotate(45deg) translate(20px, 20px);
+    }
+}
 .banner{
     width: 100%;
 }
@@ -11,13 +76,17 @@ body{
     width: 100%;
     font-family: 'Poppins', sans-serif;
 }
+a{
+    text-decoration: none;
+    color: aqua;
+}
 .container {
     display: grid; 
     grid-template-columns:0.5 fr 2fr; 
     grid-template-rows: 0.5fr 2fr 0.5fr;         
-    padding: 10px;       
-    width: 95%;
-    margin: 0 auto;
+    padding:10px; 
+    margin-right: 0;      
+    width: 98%;
       }  
 
       img.uclpic{
@@ -57,16 +126,28 @@ body{
         grid-column: 1/4;
         grid-row: 3;
     }
+    .navigation-transfer{
+        grid-row: 1;
+    }
     .main-body{
-        grid-row: 4;
+        grid-row: 5;
         grid-column: 1/4;
+    }
+    .main-body-transfer{
+        margin-top: -40px;
+        grid-column: 1;
+        grid-row: 2;
+        width: 100%;
+    }
+    .foot{
+        grid-row: 6;
     }
     ul{
         display: inline-flex;
     }
     li{
         list-style: none;
-        margin: 20px;
+        margin: 15px;
     }
     .treble{
         width: 100%;
@@ -95,9 +176,7 @@ body{
         display:block;
     }
     .navigation{
-        margin-top: 20px;
-        grid-row: 2;
-        grid-column: 1/2;
+        
     }
     .league-pic{
         grid-column: 1/3;
@@ -107,8 +186,11 @@ body{
         margin-left: 20px;
     }
     nav{
-        float:left;
-    }
+        border-right: 2px solid aqua;
+        width: 100%;
+        height: 100%;
+        margin-left: -40px;
+      }
     .main-body{
         grid-column: 2/4;
         grid-row: 2;
@@ -141,6 +223,45 @@ body{
 body{
     width: 100%;
 }
+nav{
+    display: flex;
+}
+.navigation{
+    grid-column: 1/2;
+    grid-row: 1;
+    
+}
+.league-pic{
+    grid-row: 1;
+    grid-column: 2/3;
+}
+.main-body{
+    grid-column: 2;
+    grid-row: 1;
+    margin-top:150px;
+    width: 100%;
+}
+.main-body-transfer{
+    grid-column: 2;
+    grid-row: 1;
+    width: 100%;
+}
+nav{
+    border-right: 2px solid aqua;
+    width: 100%;
+    height: 100%;
+    margin-left: -40px;
+  }
+body{
+    background: linear-gradient(135deg, rgb(0, 0, 0) 1%, rgb(7, 200, 235) 91%);
+}
+.banner{
+    height: 100px;
+}
+table{
+    width: 100%;
+}
+
 }
 
 
