--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body{
     width: 150px;
     margin: 10px;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #06f7f3;
     text-align: center;
     cursor: move;
   }
