--- a/styles.css
+++ b/styles.css
@@ -1,108 +1,155 @@
-body{
-    background: linear-gradient(180deg, rgb(145, 3, 138) 10%, rgb(8, 120, 146) 91%);
-    color:rgb(0, 255, 251);
-    width: 100%;
-    font-family: 'Poppins', sans-serif;
+/*.pitch {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  width: 100%;
+  border: 2px solid black;
 }
 
-  h1, h2 {
-    text-align: center;
-  }
+.formation {
+  display: grid;
+  grid-template-columns: repeat(4, 2fr);
+  grid-template-rows: repeat(4, 2fr);
+  gap: 10px;
+  padding: 10px;
+  background-color: #15bd3f;
+  height: 480px;
+  width: 1600px;
+}
+
+.position {
+  border: 2px dashed #888888;
+  background-color: #e0e0e0;
+  height: 100px;
+  width: 100px;
+  border-radius: 50px;
+}
+.position-GK{
+  border: 2px dashed #d203f1;
+  background-color: #e90808b6;
+  height: 100px;
+  width: 100px;
+  border-radius: 50px;
+  grid-column: 1;
+  grid-row: 1/5;
+  margin-top: 160px;
+}
+.players {
+  grid-row: 5;
+  gap: 0px;
+  padding: 10px;
+}
+
+
+.player {
   
-  #player-pool {
-    margin-bottom: 20px;
-  }
+  border: 2px solid #fc03f0;
+  background-color: #09fad6de;
+  padding: 10px;
+  height: 120px;
+  width: 100px;
+  border-radius: 50px;
+  text-align: center;
+}
+*/
+
+body{
+  background: url(pitch.png);
+  background-size: cover;
+  color:rgb(8, 8, 8);
+  width: 100%;
+  font-family: 'Poppins', sans-serif;
+}
+.container {  display: grid;
+  grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
+  grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
+  gap: 10px 0px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "GK GK GK GK GK GK GK"
+    "RB . CB1 . CB2 . LB"
+    ". . . . . . ."
+    "RAM . . CAM . . LAM"
+    ". . . . . . ."
+    "RW . . CF . . LW";
   
-  #player-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
+}
+
+.RB { 
+  grid-area: RB; 
+  text-align: center;
+  grid-row: 2;
+  grid-column: 1;
+}
+
+.GK { 
   
-  .player-card {
-    width: 150px;
-    margin: 10px;
-    padding: 10px;
-    border: 2px solid #06f7f3;
-    text-align: center;
-    cursor: move;
-  }
-  
-  .player-card img {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    margin-bottom: 5px;
-  }
-  
-  #team-roster {
-    text-align: center;
-  }
-  
-  #selected-players {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    max-width: 800px;
-    margin: 0 auto;
-  }
-  
-  .selected-player-card {
-    width: 150px;
-    height: 200px;
-    margin: 10px;
-    padding: 10px;
-    border: 5px solid #fe04c8;
-    text-align: center;
-  }
-  
-  .selected-player-card img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-bottom: 10px;
-  }
-  
-  .formation-container {
-    width: 800px;
-    height: 400px;
-    margin: 40px auto;
-    position: relative;
-    background: url("pitch.png") no-repeat center;
-    background-size: contain;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .formation-container .player-position {
-    position: absolute;
-    font-weight: bold;
-    color: #fff;
-  }
-  
-  .goalkeeper {
-    top: 50%;
-    left: 50px;
-    transform: translate(-50%, -50%);
-  }
-  
-  .defender {
-    top: 30%;
-    left: 150px;
-    transform: translate(-50%, -50%);
-  }
-  
-  .midfielder {
-    top: 50%;
-    left: 350px;
-    transform: translate(-50%, -50%);
-  }
-  
-  .forward {
-    top: 50%;
-    left: 550px;
-    transform: translate(-50%, -50%);
-  }
-  
+  grid-area: GK; 
+text-align: center;
+
+grid-row: 1;
+grid-column: 1/8;
+}
+
+.LB { 
+  grid-area: LB; 
+  text-align: center;
+  grid-row: 2;
+  grid-column: 7;
+}
+
+.RAM { 
+  grid-area: RAM; 
+  grid-row: 4;
+  grid-column: 2;
+  text-align: center;
+}
+
+.CAM { grid-area: CAM; 
+  grid-row: 4;
+  grid-column: 4;
+text-align: center;
+margin-left: -30px;
+}
+
+.LAM { grid-area: LAM; 
+  grid-row: 4;
+  grid-column: 6;
+text-align: center;
+}
+
+.CB1 { 
+grid-area: CB1;
+grid-column: 3/4;
+grid-row: 2;
+text-align: center;
+ }
+
+ .CB2 { 
+  grid-area: CB2;
+  grid-column: 5/6;
+  grid-row: 2;
+  text-align: center;
+   }
+.RW { 
+  grid-area: RW; 
+  grid-column: 1;
+  grid-row: 6;
+
+}
+
+.CF { 
+  grid-area: CF; 
+  grid-column: 4;
+  grid-row: 6;
+  margin-left: -40px;
+  text-align: center;
+}
+
+.LW { 
+  grid-area: LW; 
+  grid-column: 7;
+  grid-row: 6;
+  margin-left: 60px;
+}
