--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ table{
     width: 100%;
 }
 body{
-    background: linear-gradient(180deg, rgb(145, 3, 138) 10%, rgb(8, 120, 146) 91%);
+    background: linear-gradient(180deg, rgb(129, 9, 139) 10%, rgb(8, 120, 146) 91%);
     color:rgb(0, 255, 251);
     width: 100%;
     font-family: 'Poppins', sans-serif;
@@ -83,11 +83,12 @@ a{
 }
 .container {
     display: grid; 
-    grid-template-columns:0.5 fr 2fr; 
+    grid-template-columns:0.5fr 2fr; 
     grid-template-rows: 0.5fr 2fr 0.5fr;         
     padding:10px; 
     margin-right: 0;      
     width: 98%;
+    grid-gap:10px;
       }  
 
       img.uclpic{
@@ -141,6 +142,12 @@ a{
         grid-row: 2;
         width: 100%;
     }
+    .main-body-fantasy{
+      margin-top: -90px;
+      grid-column: 1;
+      grid-row: 2;
+      width: 100%;
+  }
     .foot{
         grid-row: 6;
     }
@@ -154,6 +161,7 @@ a{
     .treble{
         width: 100%;
     }
+  
     .league-pic {
         position: relative;
         animation: MyDiv;
@@ -168,96 +176,99 @@ a{
         75%  {right: -50px; top: 0px;}
         100%   {right:  0px;top:0px;}
       }
-
-    .grid-container
-      {  display: grid;
-        grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr;
-        grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr ;
-        width: 10%;
-        grid-auto-flow: row;
-        grid-template-areas:
-          "GK GK GK GK "
-          "RB CB1 CB2 LB"
-          "RAM .  CAM . LAM"
-          "RW . CF . LW";
-        
-      }
-      .GK { 
-    
-        grid-area: GK; 
-      text-align: center;
-      
-      grid-row: 1;
-      grid-column: 1/5;
-      }
-      .LB{
-        grid-area: LB; 
-        text-align: center;
-        grid-row: 2;
+      #righta{
+        display: inline-flex;
+        width: 100%;
+        height:100px;
+        border:2px dashed #e91e63;
+        grid-column:1/2;
+        grid-row: 3;
+        padding: 0px;
+        justify-content: center;
+    }
+    #lefta{
+        width: 90%;
+        height:150px;
+        display: inline-flex;
+        flex-wrap:wrap;    
+        border:4px dashed #e91e63;
         grid-column: 1/2;
-      }
-      .RB{
-        grid-area: RB;
-        text-align: center;
         grid-row: 2;
-        grid-column: 4/5;
-      }
-      .CB1 { 
-        grid-area: CB1;
-        grid-column: 3/4;
-        grid-row: 2;
-        text-align: center;
-        margin-left: -5px;
-         }
         
-         .CB2 { 
-          grid-area: CB2;
-          grid-column: 2/3;
-          grid-row: 2;
-          text-align: center;
-          margin-left: -45px;
-        }
-        .RW { 
-            grid-area: RW; 
-            grid-column: 1;
-            grid-row: 4;
-            margin-left: 50px;
+    }
+    .LOA{                 /*LIST OF attackers*/
+      background: #e91e63;
+      height: 40px;
+      width: 40px;
+      margin: 20px;
+      color: #fff;
+      display:flex;
+      cursor: grab;
+      font-size: 7px;
+      align-items: center;
+  }
+  #rightm{
+    display: inline-flex;
+    width: 100%;
+    height:100px;
+    border:2px dashed #1ee96c;
+    grid-column:1;
+    grid-row: 3;
+    padding: 0px;
+    justify-content: center;
+}
+#leftm{
+  width: 90%;
+  height:150px;
+  display: inline-flex;
+  flex-wrap:wrap;    
+  border:4px dashed #06ed38;
+  grid-column: 1/2;
+  grid-row: 3;
 
-          }
-          .CF { 
-            grid-area: CF; 
-            grid-column: 3;
-            grid-row: 4;
-            margin-left: -110px;
-            text-align: center;
-          }
-          .LW{
-            grid-area: LW; 
-            grid-column: 4;
-            grid-row: 4;
-            margin-left: -10px;
-          }
-          .RAM { 
-            grid-area: RAM; 
-            grid-row: 3;
-            grid-column: 1;
-            text-align: center;
-            margin-left: 40px;
-          }
-          
-          .CAM { grid-area: CAM; 
-            grid-row: 3;
-            grid-column: 3;
-          text-align: center;
-          margin-left: -100px;
-          }
-          
-          .LAM { grid-area: LAM; 
-            grid-row: 3;
-            grid-column: 4;
-          text-align: center;
-          margin-left: -100px;
-          }
+}
+.LOM{                 /*LIST OF attackers*/
+  background: #e91e63;
+  height: 40px;
+  width: 40px;
+  margin: 20px;
+  color: #fff;
+  display:flex;
+  align-items: center;
+  cursor: grab;
+  font-size: 8px;
+}
+#rightd{
+  display: inline-flex;
+  width: 100%;
+  height:100px;
+  border:2px dashed #f2ff00;
+  grid-column:1;
+  grid-row: 3;
+  padding: 0px;
+  justify-content: center;
+}
+#leftd{
+  width: 90%;
+  height:150px;
+  display: inline-flex;
+  flex-wrap:wrap;    
+  border:4px dashed #b9c419;
+  grid-column: 1/2;
+  grid-row: 3;
+}
+.LOD{                 /*LIST OF attackers*/
+background: #e91e63;
+height: 40px;
+width: 40px;
+margin: 20px;
+color: #fff;
+display:flex;
+align-items: center;
+cursor: grab;
+font-size: 8px;
+}
+    
     
 @media only screen and (min-width:768px){
     body{
@@ -337,6 +348,7 @@ nav{
     grid-column: 2;
     grid-row: 1;
     width: 100%;
+    
 }
 nav{
     border-right: 2px solid aqua;
@@ -353,105 +365,6 @@ body{
 table{
     width: 100%;
 }
-.grid-container {  display: grid;
-    grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
-    grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
-    width: 10%;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "GK GK GK GK GK GK GK"
-      "RB . CB1 . CB2 . LB"
-      ". . . . . . ."
-      "RAM . . CAM . . LAM"
-      ". . . . . . ."
-      "RW . . CF . . LW";
-    
-  }
-  
-  .RB { 
-    grid-area: RB; 
-    text-align: center;
-    grid-row: 2;
-    grid-column: 1;
-  }
-  
-  .GK { 
-    
-    grid-area: GK; 
-  text-align: center;
-  
-  grid-row: 1;
-  grid-column: 1/8;
-  }
-  
-  .LB { 
-    grid-area: LB; 
-    text-align: center;
-    grid-row: 2;
-    grid-column: 7;
-  }
-  
-  .RAM { 
-    grid-area: RAM; 
-    grid-row: 4;
-    grid-column: 2;
-    text-align: center;
-  }
-  
-  .CAM { grid-area: CAM; 
-    grid-row: 4;
-    grid-column: 4;
-  text-align: center;
-  margin-left: -30px;
-  }
-  
-  .LAM { grid-area: LAM; 
-    grid-row: 4;
-    grid-column: 6;
-  text-align: center;
-  }
-  
-  .CB1 { 
-  grid-area: CB1;
-  grid-column: 3/4;
-  grid-row: 2;
-  text-align: center;
-   }
-  
-   .CB2 { 
-    grid-area: CB2;
-    grid-column: 5/6;
-    grid-row: 2;
-    text-align: center;
-     }
-  .RW { 
-    grid-area: RW; 
-    grid-column: 1;
-    grid-row: 6;
-  
-  }
-  
-  .CF { 
-    grid-area: CF; 
-    grid-column: 4;
-    grid-row: 6;
-    margin-left: -40px;
-    text-align: center;
-  }
-  
-  .LW { 
-    grid-area: LW; 
-    grid-column: 7;
-    grid-row: 6;
-    margin-left: 60px;
-  }
-  
-
 }
-
-
-
-
-
-
-
+  
+  
