--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
  padding:0;
  margin: 0;
 }
+img:hover {
+  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
 
 /* transfer*/
 table{  
