--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ table{
 }
 body{
     background: linear-gradient(180deg, rgb(129, 9, 139) 10%, rgb(8, 120, 146) 91%);
-    color:rgb(0, 255, 251);
+    color:rgb(255, 0, 106);
     width: 100%;
     font-family: 'Poppins', sans-serif;
 }
@@ -96,30 +96,34 @@ a{
 
       img.uclpic{
         width: 100px;
+        margin-right: 10px;
       }
       img.uconlpic{
         width: 65px;
+        margin-right: 10px;
       }
       img.ueuclpic{
         width: 100px;
+        margin-right: 10px;
       }
       img.premier-league{
         width: 70px;
+        margin-right: 10px;
       }
       img.serie-A{
         width: 95px;
       }
       img.laliga{
         width: 70px;
-        margin-left: 5px;
+        margin-right: 10px;
       }
       img.bundes{
         width: 70px;
-        margin-left: 20px;
+        margin-right: 10px;
       }
       img.ligue1{
         width: 90px;
-        margin-left: 1px;
+        margin-right: 0px;
       }
       
       .league-pic{
@@ -168,13 +172,13 @@ a{
     .league-pic {
         position: relative;
         animation: MyDiv;
-        animation-duration: 1.5s;
+        animation-duration: 2s;
         animation-iteration-count: 1;
         animation-timing-function: ease-in;
         animation-direction: normal;
       }
       @keyframes MyDiv {
-        0%    {right: -400px; top: 0px;}
+        0%    {right: -100px; top: 0px;}
         50%   {right: 0px;top:0px;}
         75%  {right: -50px; top: 0px;}
         100%   {right:  0px;top:0px;}
@@ -275,24 +279,22 @@ font-size: 8px;
     
 @media only screen and (min-width:768px){
     body{
-        background: linear-gradient(360deg, rgb(0, 0, 0) 10%, rgb(2, 118, 138) 91%);
+        background: linear-gradient(360deg, rgb(0, 0, 0) 10%, rgb(138, 2, 77) 91%);
         width: 100%;
     }
     ul{
         display:block;
     }
-    .navigation{
-        
-    }
+    
     .league-pic{
         grid-column: 1/3;
-        margin-left: -10px;
+        margin-left: 0px;
     }
     img.laliga{
         margin-left: 20px;
     }
     nav{
-        border-right: 2px solid aqua;
+        border-right: 2px solid rgb(255, 0, 89);
         width: 100%;
         height: 100%;
         margin-left: -40px;
@@ -321,7 +323,7 @@ font-size: 8px;
     
 @media only screen and (min-width:1000px){
 .league-pic{
-    margin-right: 50px;
+    margin-right: 10px;
 }
 .banner{
     width: 100%;
@@ -354,13 +356,13 @@ nav{
     
 }
 nav{
-    border-right: 2px solid aqua;
+    border-right: 2px solid rgb(255, 0, 111);
     width: 100%;
     height: 100%;
-    margin-left: -40px;
+    margin-left: 0px;
   }
 body{
-    background: linear-gradient(135deg, rgb(0, 0, 0) 1%, rgb(7, 200, 235) 91%);
+    background: linear-gradient(95deg, rgb(15, 7, 7) 1%, rgb(203, 34, 65) 91%);
 }
 .banner{
     height: 100px;
