--- a/style.css
+++ b/style.css
@@ -3,22 +3,24 @@
  padding:0;
  margin: 0;
 }
-img:hover {
-  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
-}
 
+::selection{
+  background-color: aliceblue;
+  color: #e91e63;
+}
 /* transfer*/
 table{  
     
     text-align: center;
-    background-color: rgba(248, 5, 252, 0.388);
+    background-color: rgba(76, 6, 78, 0.388);
     box-shadow: 0PX 10PX 10PX 5PX rgb(255, 2, 234);
     border-radius: 20PX;
     border: 2px solid rgb(255, 2, 234);
+    width: 100%;
   }
   thead{
-    background-color: rgba(221, 0, 255, 0.32);
-    color: rgb(2, 255, 255);
+    background-color: rgba(158, 25, 13, 0.32);
+    color: aqua;
     border-radius: 10px;
   }
   td{
@@ -75,7 +77,7 @@ table{
     width: 100%;
 }
 body{
-    background: linear-gradient(180deg, rgb(129, 9, 139) 10%, rgb(8, 120, 146) 91%);
+    background: linear-gradient(180deg, rgba(53, 6, 75, 0.879) 10%, rgb(44, 5, 2) 91%);
     color:rgb(255, 0, 106);
     width: 100%;
     font-family: 'Poppins', sans-serif;
@@ -86,7 +88,7 @@ a{
 }
 .container {
     display: grid; 
-    grid-template-columns:0.5fr 2fr; 
+    grid-template-columns:1fr; 
     grid-template-rows: 0.5fr 2fr 0.5fr;         
     padding:10px; 
     margin-right: 0;      
@@ -144,7 +146,7 @@ a{
         
     }
     .main-body-transfer{
-        margin-top: -40px;
+        margin-top: -250px;
         grid-column: 1;
         grid-row: 2;
         width: 100%;
@@ -279,33 +281,37 @@ font-size: 8px;
     
 @media only screen and (min-width:768px){
     body{
-        background: linear-gradient(360deg, rgb(0, 0, 0) 10%, rgb(138, 2, 77) 91%);
+      background: linear-gradient(95deg, rgb(15, 7, 7) 1%, rgb(126, 22, 41) 91%);
         width: 100%;
     }
     ul{
         display:block;
     }
-    
+    .navigation{
+      grid-row: 2/4;
+    }
     .league-pic{
-        grid-column: 1/3;
+        grid-column: 1/4;
+        grid-row: 1;
         margin-left: 0px;
+  
     }
     img.laliga{
-        margin-left: 20px;
+        margin-left: 0px;
+        width: 50px;
     }
     nav{
-        border-right: 2px solid rgb(255, 0, 89);
-        width: 100%;
-        height: 100%;
-        margin-left: -40px;
+      
+      
       }
     .main-body{
         grid-column: 2/4;
         grid-row: 2;
     }
     .container{
-        grid-template-columns: 0.2fr 2fr;
-        width: 95%;
+        grid-template-columns: 0.2fr 1.0fr;
+        grid-template-rows: 0.85fr 2fr;
+        width: 90%;
     }
     .side-advt{
         display: none;
@@ -317,13 +323,14 @@ font-size: 8px;
         width: 100%;
     }
     img.ligue1{
-        width: 90px;
+        width: 70px;
     }
 }
     
-@media only screen and (min-width:1000px){
+@media only screen and (min-width:800px){
 .league-pic{
-    margin-right: 10px;
+    margin-right: 0px;  
+  
 }
 .banner{
     width: 100%;
@@ -336,26 +343,26 @@ nav{
 }
 .navigation{
     grid-column: 1/2;
-    grid-row: 1;
-    
+    grid-row: 1/4;
 }
 .league-pic{
     grid-row: 1;
-    grid-column: 2/3;
+    grid-column: 2/4;
 }
-.main-body{
+.main-body-index{
     grid-column: 2;
-    grid-row: 1;
-    margin-top:150px;
+    grid-row: 2/4;
     width: 100%;
+    margin-top: -150px;
 }
 .main-body-transfer{
     grid-column: 2;
     grid-row: 1;
     width: 100%;
+    margin-top: 5px;
     
 }
-nav{
+.navigation{
     border-right: 2px solid rgb(255, 0, 111);
     width: 100%;
     height: 100%;
@@ -368,8 +375,31 @@ body{
     height: 100px;
 }
 table{
-    width: 100%;
+    width: 95%;
 }
+.main-body-news{
+  grid-column: 2;
+    grid-row: 1;
+    width: 100%;
+    margin-top: 110px;
+}
+video{
+  margin-top: 0px;
+  position: relative;
+}
+.container{
+  grid-template-columns: 0.5fr 3fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  width: 98%;
+}
+.schedule{
+  grid-column: 3;
+}
+.fixture{
+  text-align: center;
+  width: 100%;
+}
+
 }
   
   
