--- a/style.css
+++ b/style.css
@@ -413,11 +413,107 @@ video{
 }
 .schedule{
   grid-column: 3;
+  grid-row: 2;
+  margin-top: -90px;
 }
 .fixture{
   text-align: center;
   width: 100%;
 }
+
+#righta{
+  display: inline-flex;
+  width: 100%;
+  height:100px;
+  border:2px dashed #e91e63;
+  
+  padding: 0px;
+  justify-content: center;
+}
+#lefta{
+  width: 90%;
+  height:150px;
+  display: inline-flex;
+  flex-wrap:wrap;    
+  border:4px dashed #e91e63;
+  
+  
+}
+.LOA{                 /*LIST OF attackers*/
+background: #e91e63;
+height: 40px;
+width: 40px;
+margin: 20px;
+color: #fff;
+display:flex;
+cursor: grab;
+font-size: 7px;
+align-items: center;
+}
+#rightm{
+display: inline-flex;
+width: 100%;
+height:100px;
+border:2px dashed #1ee96c;
+
+padding: 0px;
+justify-content: center;
+}
+#leftm{
+width: 90%;
+height:150px;
+display: inline-flex;
+flex-wrap:wrap;    
+border:4px dashed #06ed38;
+
+
+}
+.LOM{                 /*LIST OF attackers*/
+background: #e91e63;
+height: 40px;
+width: 40px;
+margin: 20px;
+color: #fff;
+display:flex;
+align-items: center;
+cursor: grab;
+font-size: 8px;
+}
+#rightd{
+display: inline-flex;
+width: 100%;
+height:100px;
+border:2px dashed #f2ff00;
+
+padding: 0px;
+justify-content: center;
+}
+#leftd{
+width: 90%;
+height:150px;
+display: inline-flex;
+flex-wrap:wrap;    
+border:4px dashed #b9c419;
+
+}
+
+
+.LOD{                 /*LIST OF attackers*/
+background: #e91e63;
+height: 40px;
+width: 40px;
+margin: 20px;
+color: #fff;
+display:flex;
+align-items: center;
+cursor: grab;
+font-size: 8px;
+}
+.main-body-fantasy{
+  
+  width: 100%;
+}
+
 
 }
   
